--- a/JavaScript30/Hold Shift and Check Checkboxes/index.html
+++ b/JavaScript30/Hold Shift and Check Checkboxes/index.html
@@ -46,7 +46,7 @@
     <script>
         const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
 
-        let lasChecked;
+        let lastChecked;
 
         function handleCheck(e) {
             let inBetween = false;
@@ -54,8 +54,9 @@
             if (e.shiftKey && this.checked) {
                 checkboxes.forEach(checkbox => {
                     console.log(checkbox);
-                    if (checkbox === this || checkbox === lasChecked) {
+                    if (checkbox === this || checkbox === lastChecked) {
                         inBetween = !inBetween;
+                        console.log(inBetween);
                         console.log('starting to check them inbetween');
                     }
 
@@ -65,7 +66,7 @@
                 })
             }
 
-            lasChecked = this;
+            lastChecked = this;
         }
 
         checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
